# CRIRESViz

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt
docs/: README.md  introduction.md  molecules.md  observation_planning.md  plotting.md  quickstart.md  settings.md  sky.md
examples/: 01_single_setting.py  02_multiple_settings.py  03_single_molecule.py  04_multiple_molecules.py  05_sky_transmission.py  06_sky_emission.py  07_compact_layout.py  08_everything_together.py  09.info.py  10_band.py  11_coverage.py  12_rank.py  README.md  plot_opacity.py  plot_settings.py  run_examples.sh
resources/extracted/previews/: 00_page90.csv  00_page90.pkl  01_page90.csv  01_page90.pkl  02_page91.csv  02_page91.pkl  03_page92.csv  03_page92.pkl  04_page92.csv  04_page92.pkl  05_page93.csv  05_page93.pkl  criressettings_tidy.csv  normalized.csv
src/criresviz/: __init__.py  common.py
src/criresviz/database/: __init__.py  crires_settings.yaml  loader.py
src/criresviz/models/: __init__.py  band.py  detector.py  feature.py  molecule.py  order.py  setting.py  sky.py
src/criresviz/plotting/: __init__.py  detectors.py  molecules.py  plot.py  plot_settings.py  plotting.py  sky.py  style.py  utils.py
src/criresviz/skycalc/: __init__.py  compute.py  defaults.py
tests/: test_detector.py  test_molecule.py  test_normalize.py  test_order.py  test_plot.py  test_set_mol.py  test_setting.py  test_sky.py
tools/: build_database.py  common.py  compute_opacity.py  config.py  extract_settings.py  inspect_pdf.py  normalize_settings.py
