[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRIRESViz"
version = "0.1.0"
description = "Visualization tools for CRIRES+ observations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}

authors = [
    {name = "Andrea Barone"}
]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
