[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRIRESViz"
version = "1.0.0"
description = "Visualization tools for ESO CRIRES+ wavelength settings, molecular opacity regions, and atmospheric transmission."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

authors = [
    { name = "Andrea Barone" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=8",
    "black>=24",
    "ruff>=0.6",
]

tools = [
    "pandas>=2.2",
    "scipy>=1.11",
    "camelot-py>=0.11",
]

opacity = [
    "petitRADTRANS",
]

all = [
    "pandas>=2.2",
    "scipy>=1.11",
    "camelot-py>=0.11",
    "petitRADTRANS",
]

[project.urls]
Homepage = "https://github.com/andrew070500/CRIRESViz.git"
Repository = "https://github.com/andrew070500/CRIRESViz.git"
Issues = "https://github.com/AndreaBarone/CRIRESViz/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
criresviz = [
    "database/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
